two-lines-renderer: fix centering of text when wrap-width is used

Take into account wrap-width when setting the layout width for
measuring.
This fixes an alignment bug when the available area is larger than the
text wrap width.

https://bugzilla.gnome.org/show_bug.cgi?id=687286